# GrblWheel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
backend/grblwheel/: __init__.py  config.py  files.py  hardware_integration.py  job_runner.py  main.py  serial_grbl.py
backend/grblwheel/api/: __init__.py  files_api.py  health.py  job_api.py  macros_api.py  serial_api.py
backend/grblwheel/hardware/: __init__.py  base.py  gpio_controller.py  mock_controller.py
config/: config.example.yaml  grblwheel.example.conf
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
scripts/: check-update-and-reboot.sh  install-pi.sh  install-win.ps1  launch-candle.sh  setup-pi.sh  update-pi.sh  update-win.ps1
systemd/: README.md  grblwheel-kiosk.service  grblwheel.service  kiosk.sh
tests/: test_api.py  test_config.py
